name:                dense
version:             0.1.0.0
synopsis:            Mutable and immutable dense arrays with multi-dimensional indexing
description:
  Provides multi-dimentional arrays by adding a shape to a vector from
  the vector package using indicies from the linear package. Supports
  mutable a immutable arrays with a similar interface to vector but with
  a strong lens flavour.
license:             BSD3
license-file:        LICENSE
author:              cchalmers
maintainer:          c.chalmers@me.com
copyright:           (c) Christopher Chalmers 2015
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Dense
    Data.Dense.Base
    Data.Dense.Boxed
    Data.Dense.Generic
    Data.Dense.Index
    Data.Dense.Stencil
    Data.Dense.Mutable
    Data.Dense.TH
    Data.Dense.Storable
    Data.Dense.Unboxed
  other-extensions:
    BangPatterns CPP ConstraintKinds DeriveDataTypeable DeriveFunctor
    DeriveGeneric FlexibleContexts FlexibleInstances
    MultiParamTypeClasses MultiWayIf RankNTypes StandaloneDeriving
    TypeFamilies
  build-depends:
    base >=4.6 && <4.9,
    binary,
    bytes,
    cereal,
    comonad,
    deepseq,
    ghc-prim,
    hashable,
    lens,
    linear >= 1.20,
    primitive,
    semigroupoids,
    template-haskell,
    transformers,
    transformers-compat,
    vector
  hs-source-dirs:   src
  ghc-options:      -Wall
  default-language: Haskell2010

test-suite doctests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          doctest.hs
  hs-source-dirs:   tests
  build-depends:
    base >=4.6 && <4.9,
    binary,
    bytes,
    cereal,
    comonad,
    deepseq,
    ghc-prim,
    hashable,
    lens,
    linear >= 1.20,
    primitive,
    semigroupoids,
    template-haskell,
    transformers,
    transformers-compat,
    vector,
    doctest,
    simple-reflect
