name:                shaped-vector
version:             0.1.0.0
synopsis:            Mutable and immutable arrays with multi-dimensional indexing
description:
  Experimental package that gives shape to a generic vector to turn it
  into a multi-dimensional array. Uses vectors from the linear package
  for indicies.

  Provdies mutable a immutable interface, indexed traversals over the
  array values.
license:             BSD3
license-file:        LICENSE
author:              cchalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Vector.Shaped
    Data.Vector.Shaped.Mutable
    Data.Vector.Shaped.Index
  -- other-modules:       
  other-extensions:    FlexibleInstances, UndecidableInstances, DeriveFunctor, DeriveDataTypeable
  build-depends:
    base >=4.7 && <4.9,
    linear,
    deepseq,
    hashable,
    vector,
    primitive,
    lens,
    cereal,
    bytes,
    binary,
    transformers
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010
