name:                shaped
version:             0.1.0.0
synopsis:            Mutable and immutable arrays with multi-dimensional indexing
description:
  Provides multi-dimentional arrays by adding a shape to a vector from
  the vector package using indicies from the linear package. Supports
  mutable a immutable arrays with a similar interface to vector but with
  a strong lens flavour.
license:             BSD3
license-file:        LICENSE
author:              cchalmers
maintainer:          c.chalmers@me.com
copyright:           (c) Christopher Chalmers 2015
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Shaped
    Data.Shaped.Base
    Data.Shaped.Mutable
    Data.Shaped.Index
  other-extensions:
    BangPatterns CPP ConstraintKinds DeriveDataTypeable DeriveFunctor
    DeriveGeneric FlexibleContexts FlexibleInstances
    MultiParamTypeClasses MultiWayIf RankNTypes StandaloneDeriving
    TypeFamilies
  build-depends:
    base >=4.6 && <4.9,
    vector >= 0.11.0.0,
    linear,
    deepseq,
    hashable,
    primitive,
    lens,
    cereal,
    bytes,
    comonad,
    binary,
    transformers-compat,
    transformers
  hs-source-dirs:   src
  ghc-options:      -Wall
  default-language: Haskell2010


test-suite doctests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          doctest.hs
  hs-source-dirs:   tests
  build-depends:
    base,
    vector >= 0.11.0.0,
    linear,
    deepseq,
    hashable,
    primitive,
    lens,
    cereal,
    bytes,
    comonad,
    binary,
    transformers-compat,
    transformers,
    doctest
